Possible fix for truncated EU BW symbol in generated PDF in production. #96

--- a/app/assets/stylesheets/_sign-layout.scss
+++ b/app/assets/stylesheets/_sign-layout.scss
@@ -231,10 +231,8 @@ $rowHeightFoot: 100% - ($rowHeightHead + $rowHeightAbout + $rowHeightInfo);
 
 .c-content-header__classification {
   img {
-    height: 12rem;
-    max-width: 100%;
+    height: 11rem;
   }
-
 }
 
 @media print {
